# 2dgameengine

./: CMakeLists.txt  README.md
assets/scripts/: Level1.lua  init.lua
src/: Main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.h
src/Components/: AnimationComponent.hpp  BoxColliderComponent.hpp  HealthComponent.hpp  KeyboardControlledComponent.hpp  ProjectileComponent.hpp  ProjectileEmitterComponent.hpp  RigidBodyComponent.hpp  ScriptComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextLabelComponent.hpp  TransformComponent.hpp
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: EventBus.hpp
src/Events/: CollisionEvent.hpp  KeyPressedEvent.hpp
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.hpp  CameraMovementSystem.hpp  CollisionSystem.hpp  DamageSystem.hpp  KeyboardControlSystem.hpp  MovementSystem.hpp  ProjectileEmitSystem.hpp  ProjectileLifeCycleSystem.hpp  RenderColliderSystem.hpp  RenderGUISystem.hpp  RenderHealthBarSystem.hpp  RenderSystem.hpp  RenderTextSystem.hpp  ScriptSystem.hpp  SoundSystem.hpp
